# CPP-LAB

design-patterns/abstract-factory/: AbstractFactory.h  CMakeCache.txt  CMakeLists.txt  DashedFrame.cpp  DashedFrame.h  DashedFrameFactory.h  DottedFrame.cpp  DottedFrameFactory.h  Frame.h  Makefile  SolidFrame.cpp  SolidFrame.h  SolidFrameFactory.h  abstract_factory_method  cmake_install.cmake  main.cpp
design-patterns/adapter/: CMakeLists.txt  CRUDNative.h  README.md  UserCRUDNative.cpp  UserCRUDNative.h  UserCRUDREST.cpp  UserCRUDREST.h  UserCRUDRESTAdapter.cpp  UserCRUDRESTAdapter.h  main.cpp
design-patterns/builder/: CMakeLists.txt  Computer.h  ComputerBuilder.h  Director.h  Makefile  SuperComputerBuilder.h  main.cpp
design-patterns/command/: BackwardCommand.cpp  BackwardCommand.h  CMakeLists.txt  Car.cpp  Car.h  Command.h  Controller.cpp  Controller.h  ForwardCommand.cpp  ForwardCommand.h  LeftCommand.cpp  LeftCommand.h  README.md  RightCommand.cpp  RightCommand.h  main.cpp
design-patterns/composite/: CMakeLists.txt  Composite.h  Makefile  Matryoshka.h  main.cpp
design-patterns/factory-method/: CMakeLists.txt  DottedFrame.h  FrameFactory.cpp  FrameFactory.h  README.md  main.cpp
week1/: Theory.md
week10/: Theory.md  main.cpp
week11/: Theory.md
week2/: Theory.md
week3/: Theory.md
week4-5/: Theory.md
